tests/ui/trait-bounds/suggest-maybe-sized-bound.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/suggest-maybe-sized-bound.rs:8:12
   |
LL |         a: StructA<isize, [u8]>,
   |            ^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by an implicit `Sized` bound in `StructA`
  --> $DIR/suggest-maybe-sized-bound.rs:3:23
   |
LL |     struct StructA<A, B = A> {
   |                       ^^^^^ required by the implicit `Sized` requirement on this type parameter in `StructA`
help: consider relaxing the implicit `Sized` restriction
   |
LL |     struct StructA<A, B: ?Sized = A> {
   |                        ++++++++

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/suggest-maybe-sized-bound.rs:17:21
   |
LL |         type P<X> = [u8];
   |                     ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `Trait::P`
  --> $DIR/suggest-maybe-sized-bound.rs:13:9
   |
LL |         type P<X>;
   |         ^^^^^^^^^^ required by this bound in `Trait::P`
help: consider relaxing the implicit `Sized` restriction
   |
LL |         type P<X>: ?Sized;
   |                  ++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
